--- a/style.css
+++ b/style.css
@@ -1,98 +1,180 @@
 body, html{
-		  height: 100%;
-		}
+  height: 100%;
+}
 
-		body{
-		  display: flex;
-		  justify-content: center;
-		  align-items: center;
-		  flex-wrap: wrap;
-		  font-family: 'Lato';
-		  font-weight: 900;
-		  color: #353535;
-		  position: relative;
-		  margin: 0 0 0 0;
-		}
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  font-family: 'Rubik';
+  font-weight: 800;
+  color: #353535;
+  position: relative;
+  margin: 0 0 0 0;
+}
 
-		.text{
-		  display: inline-block;
-		  font-size: 15vmin;
-		  /*line-height: 1.205;*/
-		  line-height: 1.205;
-		}
+.text{
+  display: inline-block;
+  font-size: 18vmin;
+  letter-spacing: 3px;
+  /*line-height: 1.205;*/
+  line-height: 1.205;
+}
 
-		.text__first, .text__second{
-		  position: relative;
-		}
+.text__first, .text__second{
+  position: relative;
+}
 
-		.text__word{
-		  opacity: 0;
-		}
+.text__word{
+  opacity: 0;
+}
 
-		.text__first-bg, .text__second-bg{
-		  display: block;
-		  width: 100%;
-		  height: 100%;
-		  position: absolute;
-		  left: 0;
-		  top: 0;
-		  z-index: 100;
-		  transform-origin: left;
-		  transform: scaleX(0);
-		}
+.text__first-bg, .text__second-bg{
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  transform-origin: left;
+  transform: scaleX(0);
+}
 
-		.text__first-bg{
-		  background-color: #9ba5b5;
-		}
+.text__first-bg{
+  background-color: #9ba5b5;
+}
 
-		.text__second-bg{
-		  background-color: #009688;
-		}
+.text__second-bg{
+  background-color: #009688;
+}
 
-		.text__second{
-		  margin-left: 15vmin;
-		}
+.text__second{
+  margin-left: 15vmin;
+}
 
-		.header{
-			width: 100%;
-			display: inline-block;
-			position: absolute;
-			align-self: start;
-			text-align: center;
-		}
-		.menu{
-			list-style: none;
-			display: inline-block;
-			align-self: center;
-			font-size: 25px;
-			font-family: "Roboto Slab";
-			margin: 20px 20px 0px 20px;
-			padding: 10px 10px 10px 10px;
-		}
+.header{
+	width: 100%;
+	display: inline-block;
+	position: absolute;
+	align-self: start;
+	text-align: center;
+}
+.menu{
+	list-style: none;
+	display: inline-block;
+	align-self: center;
+	font-size: 25px;
+	font-family: "Roboto Slab";
+	margin: 20px 20px 0px 20px;
+	padding: 10px 10px 10px 10px;
+}
 
-		/* underline */
-		.underline-magical {
-			background-image: linear-gradient(120deg, #f3e9c6 0%, #f3e9c6 100%);
-			background-repeat: no-repeat;
-			background-size: 100% 0.2em;
-			background-position: 0% 100%;
-			transition: background-size 0.25s ease-in;
-		}
+.menu-wrap{
+	padding: 0px;
+}
 
-		.footer{
-			align-items: end;
-			position: absolute;
-			display: inline-block;
-			align-self: center;
-			bottom: 0px;
-			padding:20px 0px 30px 0px;
-			background: #1a1a1a;
-			color: white;
-			width: 100%;
-			font-family: "Anaheim";
-			text-align: center;
-		}
-		
-		.underline-magical:hover{
-			background-size: 100% 100%;
-		}
+/* underline */
+.underline-magical {
+	background-image: linear-gradient(120deg, #f3e9c6 0%, #f3e9c6 100%);
+	background-repeat: no-repeat;
+	background-size: 100% 0.2em;
+	background-position: 0% 100%;
+	transition: background-size 0.25s ease-in;
+}
+
+.footer{
+	align-items: end;
+	position: absolute;
+	display: inline-block;
+	align-self: center;
+	bottom: 0px;
+	padding:20px 0px 30px 0px;
+	background: #1a1a1a;
+	color: white;
+	width: 100%;
+	font-family: "Anaheim";
+	text-align: center;
+}
+
+.underline-magical:hover{
+	background-size: 100% 100%;
+}
+
+.no-js .preloader { display: none;  }
+.preloader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: #fff;
+}
+
+.preloader-animation {
+  margin: -20px auto 0;
+  top: 50%;
+  left: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  text-align: center;
+  -webkit-animation: rotate 2.0s infinite linear;
+  animation: rotate 2.0s infinite linear;
+}
+
+.dot1, .dot2 {
+  width: 60%;
+  height: 60%;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  background-color: #1a1a1a;
+  border-radius: 100%;
+  -webkit-animation: bounce 2.0s infinite ease-in-out;
+  animation: bounce 2.0s infinite ease-in-out;
+}
+
+.dot2 {
+  top: auto;
+  bottom: 0;
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes rotate {
+  100% { 
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+    -webkit-transform: rotate(360deg)
+  }
+}
+
+@-webkit-keyframes bounce {
+  0%,
+  100% {
+    -webkit-transform: scale(0.0);
+  }
+  50% {
+    -webkit-transform: scale(1.0);
+  }
+}
+
+@keyframes bounce {
+  0%,
+  100% { 
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% { 
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+  }
+}
