--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body{
 	font-family: "Roboto Slab";
 	margin: 20px 20px 0px 20px;
 	padding: 10px 10px 10px 10px;
+	color: #1a1a1a;
 }
 
 .menu-link{
